k8s/app-nonprod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app-nonprod
  labels:
    name: app-nonprod
