k8s/app-nonprod/spa.yaml
apiVersion: v1
kind: Service
metadata:
  name: spa
  namespace: app-nonprod
spec:
  selector:
    app: spa
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
