k8s/app-nonprod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spa-ingress
  namespace: app-nonprod
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
    - host: blooperry.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spa
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: microservice1
                port:
                  number: 8080
